CHANGES
*******

0.11 (unreleased)
=================

* ...

0.10 (2008-06-06)
=================

Feature changes
---------------

* Add a ``validateClass`` validate function for directives.

* Moved ``FakeModule`` and ``fake_import`` into a ``martian.testing``
  module so that they can be reused by external packages.

* Introduce new tutorial text as README.txt. The text previously in
  ``README.txt`` was rather too detailed for a tutorial, so has been
  moved into ``core.txt``.

* Introduce a ``GrokkerRegistry`` class that is a ``ModuleGrokker``
  with a ``MetaMultiGrokker`` in it. This is the convenient thing to
  instantiate to start working with Grok and is demonstrated in the
  tutorial.

* Introduced three new martian-specific directives:
  ``martian.component``, ``martian.directive`` and
  ``martian.priority``. These replace the ``component_class``,
  ``directives`` and ``priority`` class-level attributes. This way
  Grokkers look the same as what they grok. This breaks backwards
  compatibility again, but it's an easy replace operation. Note that
  ``martian.directive`` takes the directive itself as an argument, and
  then optionally the same arguments as the ``bind`` method of
  directives (``name``, ``default`` and ``get_default``). It may be
  used multiple times. Note that ``martian.baseclass`` was already a
  Martian-specific directive and this has been unchanged.

* For symmetry, add an ``execute`` method to ``InstanceGrokker``.

0.9.7 (2008-05-29)
==================

Feature changes
---------------

* Added a ``MethodGrokker`` base class for grokkers that want to grok
  methods of a class rather than the whole class itself.  It works
  quite similar to the ``ClassGrokker`` regarding directive
  definition, except that directives evaluated not only on class (and
  possibly module) level but also for each method.  That way,
  directives can also be applied to methods (as decorators) in case
  they support it.

0.9.6 (2008-05-14)
==================
